--- a/templates/addinfo.html
+++ b/templates/addinfo.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Help{% endblock %}
+{% block title %}add info{% endblock %}
 {% block content %}
-<h1>Help</h1>
+<h1>add info</h1>
 {% endblock %}
