--- a/templates/base.html
+++ b/templates/base.html
@@ -5,47 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Font-awesome  -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <!-- Font-awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <!-- styles css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Cricars</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/rentmycar">Rent my car</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/help">Help</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/signup">sign up</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <footer>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Cricars</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/rentmycar">Rent my car</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="//help">Help</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Log in</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-    {% block content %}{% endblock %}
-    
-    <h1>FOOTER</h1>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+{% block content %}{% endblock %}
+<footer>
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3 footer-section">
+              <h4>About Us</h4>
+              <p><a href="/about">Who are we?</a></p>
+              <p><a href="#">Join Us</a></p>
+              <p><a href="#">press and pub</a></p>
+              <p><a href="#">blog</a></p>
+              <p>
+                 <a href="https://web.facebook.com/el.walid.bousmaha/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/el.walid.bousmaha"target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/EBousmaha" target="_blank"> <i class="fa-brands fa-twitter"></i></a>
+            </p>
+
+          </div>
+          <div class="col-md-3 footer-section">
+              <h4>Host</h4>
+              <p><a href="#">Why rent your car?</a></p>
+              <p><a href="#">Insurance</a></p>
+              <p><a href="#">Your rental experience</a></p>
+              <p><a href="#">Tips</a></p>
+              <p><a href="#">Professionals</a></p>
+          </div>
+          <div class="col-md-3 footer-section">
+              <h4>Guest</h4>
+              <p><a href="#">Rental</a></p>
+              <p><a href="#">experience</a></p>
+              <p><a href="#">Insurance</a></p>
+              <p><a href="#">Tips</a></p>
+          </div>
+          <div class="col-md-3 footer-section">
+              <h4>Help</h4>
+              <p><a href="#">FAQ</a></p>
+              <p><a href="#">contact us</a></p>
+              <!-- <p><a href="#"></a></p> -->
+              <!-- <p><a href="#">Tips</a></p> -->
+          </div>
+          <!-- <div class="col-md-3 footer-section">
+              <h4>Contact</h4>
+              <p>Email: info@rentmycar.com</p>
+              <p>Phone: +1 123-456-7890</p>
+          </div>
+          <div class="col-md-3 footer-section">
+              <h4>Follow Us</h4>
+              <p><a href="#">Facebook</a></p>
+              <p><a href="#">Twitter</a></p>
+              <p><a href="#">Instagram</a></p>
+          </div> -->
+      </div>
+  </div>
+</footer>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
