--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,39 +3,34 @@
 {% block title %}Signup{% endblock %}
 
 {% block content %}
-<h1 class="centertext">Signup Page</h1>
-<div class="container center-container">
-    <div class="col-md-7 center-form">
-        {% if error %}
-            <p style="color: red;">{{ error }}</p>
-        {% endif %}
-            <form class="row g-3">
-              <div class="col-md-12">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="inputBorder form-control " id="email" placeholder="Enter your email" required>
-              </div>
-              <div class="col-md-6">
-                <label for="Password " class="form-label">Password</label>
-                <input type="password" class="inputBorder form-control" id="password" placeholder="Enter your password" required>
-            </div>
-              <div class="col-md-6">
-                <label for="Confirm password" class="form-label">Confirm password</label>
-                <input type="password" class="inputBorder form-control" id="conferm-password" placeholder="Confirm your password" required>
-    
-              </div>
-              <div class="col-12">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="" required="">
-                  <label class="form-check-label" for="">
-                    Agree to terms and conditions
-                  </label>
-                </div>
-              </div>
-              <div class="col-12">
-                <button class="btn-size btn btn-color btn-outline-primary" type="submit">Sign up</button>
-              </div>
-            </form>
-    </div>
+<div class="">
+  <form id="signupForm" action="/signup" method="post">
+      <div class="form-group">
+          <label for="email">Email:</label>
+          <input class="search" type="email" class="form-control" id="email" name="email" required>
+          <div id="emailError" class="error"></div>
+      </div>
 
+      <div class="form-row">
+          <div class="form-group col-md-6">
+              <label for="password">Password:</label>
+              <input class="search" type="password" class="form-control" id="password" name="password" required>
+              <div id="passwordError" class="error"></div>
+          </div>
+
+          <div class="form-group col-md-6">
+              <label for="confirm_password">Confirm Password:</label>
+              <input  class="search" type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+              <div id="confirmPasswordError" class="error"></div>
+          </div>
+          
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" required type="checkbox" value="" id="defaultCheck1">
+        <label class="form-check-label" for="defaultCheck1">
+            I have read and agree to the <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy </a>       </label>
+      </div>
+      <button type="submit" class="btn btn-outline-primary col-md-12" disabled><i class="fa-solid fa-user-plus"></i> Sign-up</button>
+  </form>
 </div>
 {% endblock %}
