--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,11 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="hero">
+    <div class="textcontainer">
+
+        <h2 class="lato-bold">Rent a car near YOU</h2>
+        <h3 class="lato-bold">Feeling the urge to go? Absolutely!</h3>
+    </div>
     <div class="searchForm">
         <form action="/search" method="GET">
             <div class="form-group">
@@ -18,7 +23,7 @@
                     onfocus="(this.type='date')"  onblur="(this.type='text')" name="date" id="date">
                 </div>
             </div>
-            <button class="btn btn-outline-primary col-md-12" type="submit"><i class="fas fa-search"></i> Search</button>
+            <button class="btn btn-outline-primary col-md-12" type="submit"><i class="fas fa-search"></i>&ThickSpace;&ThickSpace; Search</button>
         </form>
     </div>
 </div>
@@ -77,7 +82,6 @@
             <div class="col-lg-6">
                 <!-- Content for the second column -->
                 <h3 class="la">OVER 3 million user trust us</h3>
-                <div class="contrainer">
                     <div class="row">
                         <div class="col-sm-12 testimonial" >
                             <p>testimonial</p>
@@ -92,7 +96,6 @@
                             <p>testimonial</p>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </div>
@@ -110,7 +113,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,weekend" width="50px" height="50px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,weekend" width="100px" height="100px" alt="" srcset="">
                         <h5>WEEKEND</h5>
                     </div>
                 </div>
@@ -120,7 +123,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,Holidays" width="50px" height="50px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,Holidays" width="100px" height="100px" alt="" srcset="">
                         <h5>Holidays</h5>
                     </div>
                 </div>
@@ -130,7 +133,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,Moving,house" width="50px" height="50px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,Moving,house" width="100px" height="100px" alt="" srcset="">
                         <h5>Moving house</h5>
                     </div>
                 </div>
@@ -140,7 +143,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,work" width="50px" height="50px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,work" width="100px" height="100px" alt="" srcset="">
                         <h5>For work</h5>
                     </div>
                 </div>
@@ -150,7 +153,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,red" width="50px" height="50px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,red" width="100px" height="100px" alt="" srcset="">
                         <h5>Wedding</h5>
                     </div>
                 </div>
