--- a/templates/login.html
+++ b/templates/login.html
@@ -5,16 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <form id="signupForm" action="/signup" method="post">
+
+    <form class="login" action="/signup" method="post">
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
             <div id="emailError" class="error"></div>
         </div>
 
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password" class="form-control" id="password" placeholder="Password" pname="password" required>
             <div id="passwordError" class="error"></div>
         </div>
 
