--- a/templates/login.html
+++ b/templates/login.html
@@ -5,22 +5,23 @@
 {% endblock %}
 
 {% block content %}
-
-    <form class="login" action="/signup" method="post">
+<h2 class="centerText">Welcome back</h2>
+    <form class="form-width" action="/login" method="post">
         <div class="form-group">
-            <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
-            <div id="emailError" class="error"></div>
+            <input type="email" class="form-control main-input-style" id="email" placeholder="Email" name="email" required>
         </div>
 
         <div class="form-group">
-            <input type="password" class="form-control" id="password" placeholder="Password" pname="password" required>
-            <div id="passwordError" class="error"></div>
+            <input type="password" class="form-control main-input-style" id="password" placeholder="Password" pname="password" required>
+        </div>
+        <div class="form-group">
+            <p class="lato-light">forget password? <a href="/resetpassword">Reset password</a></p>
         </div>
 
-        <button type="submit" class="btn btn-outline-primary col-md-12" disabled>
+        <button type="submit" class="btn btn-primary col-md-12 btn-style">
             <i class="fa-solid fa-right-to-bracket"></i> Login
         </button>
 
-        <p>Don't have an account? <a href="/signup">Create one here</a></p>
+        <p class=" lato-regular">Don't have an account? <a href="/signup">Create one here</a></p>
     </form>
 {% endblock %}
