--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -2,5 +2,11 @@
 
 {% block title %}reset password{% endblock %}
 {% block content %}
-<h1>reset password</h1>
+<form action="" class="w-50">
+    <input type="email" name="email" id="email" class="form-control" placeholder="Email:">
+    <button class="btn  btn-outline-primary col-12 my-3" type="submit"><i class="bi bi-send"></i> Send verification
+        link</button>
+    <p class="lato-regular">Don't have an account? <a href="/signup">Create one here</a></p>
+
+</form>
 {% endblock %}
