--- a/templates/home.html
+++ b/templates/home.html
@@ -11,19 +11,21 @@
     <div class="searchForm">
         <form action="/search" method="GET">
             <div class="form-group">
-                <input type="text" class="search" name="place" placeholder="Enter an address, a train station..." id="place">
+                <input type="text" class="form-control" name="place" placeholder="Enter an address, a train station..."
+                    id="place">
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input class="search" placeholder="Start of rental"
-                    onfocus="(this.type='date')"  onblur="(this.type='text')" type="text" name="date" id="date">
+                    <input class="form-control" placeholder="Start of rental" onfocus="(this.type='date')"
+                        onblur="(this.type='text')" type="text" name="date" id="date">
                 </div>
                 <div class="form-group col-md-6">
-                    <input class="search"  type="text" placeholder="End of rental"
-                    onfocus="(this.type='date')"  onblur="(this.type='text')" name="date" id="date">
+                    <input class="form-control" type="text" placeholder="End of rental" onfocus="(this.type='date')"
+                        onblur="(this.type='text')" name="date" id="date">
                 </div>
             </div>
-            <button class="btn btn-outline-primary col-md-12" type="submit"><i class="fas fa-search"></i>&ThickSpace;&ThickSpace; Search</button>
+            <button class="btn btn-outline-seconday btn-style col-md-12" type="submit"><i
+                    class="fas fa-search"></i>&ThickSpace;&ThickSpace; Search</button>
         </form>
     </div>
 </div>
@@ -39,15 +41,17 @@
             </div>
             <div class="col-sm-4">
                 <!-- Content for the first column -->
-                <i class="fa-solid fa-shield" style="color: #43E094;"></i>            <span>Multi-risk insurance and assistance 24/7</span>
+                <i class="fa-solid fa-shield" style="color: #43E094;"></i> <span>Multi-risk insurance and assistance
+                    24/7</span>
             </div>
             <div class="col-sm-4">
                 <!-- Content for the first column -->
-                <i class="fa-solid fa-car-side" style="color: #43E094;"></i>            <span>30,000 cars and utility vehicles to rent</span>
+                <i class="fa-solid fa-car-side" style="color: #43E094;"></i> <span>30,000 cars and utility vehicles to
+                    rent</span>
             </div>
         </div>
     </div>
-    
+
 </section>
 <!-- End Features section -->
 
@@ -57,45 +61,45 @@
             <div class="col-lg-6">
                 <!-- Content for the first column -->
                 <h3 class="lato-light">TRY NOW, CARS NEAR YOU main</h3>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img src="https://source.unsplash.com/random/?car,white" width="200px"  height="200px" alt="">
-                        </div>
-                        
-                        <div class="col-sm-6">
-                            <img src="https://source.unsplash.com/random/?car,red" width="200px"  height="200px" alt="">
-                        </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img src="https://source.unsplash.com/random/?car,white" width="200px" height="200px" alt="">
                     </div>
+
+                    <div class="col-sm-6">
+                        <img src="https://source.unsplash.com/random/?car,red" width="200px" height="200px" alt="">
+                    </div>
+                </div>
                 <!-- <div class="container"> -->
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <img src="https://source.unsplash.com/random/?car,yellow" width="200px"  height="200px" alt="">
-                        </div>
-                        
-                        <div class="col-sm-6">
-                            <img src="https://source.unsplash.com/random/?car,black" width="200px"  height="200px" alt="">
-                        </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img src="https://source.unsplash.com/random/?car,yellow" width="200px" height="200px" alt="">
+                    </div>
+
+                    <div class="col-sm-6">
+                        <img src="https://source.unsplash.com/random/?car,black" width="200px" height="200px" alt="">
+                    </div>
                     <!-- </div> -->
                 </div>
             </div>
-            
+
             <div class="col-lg-6">
                 <!-- Content for the second column -->
                 <h3 class="la">OVER 3 million user trust us</h3>
-                    <div class="row">
-                        <div class="col-sm-12 testimonial" >
-                            <p>testimonial</p>
-                        </div>
-                        <div class="col-sm-12 testimonial">
-                            <p>testimonial</p>
-                        </div>
-                        <div class="col-sm-12 testimonial">
-                            <p>testimonial</p>
-                        </div>
-                        <div class="col-sm-12 testimonial">
-                            <p>testimonial</p>
-                        </div>
+                <div class="row">
+                    <div class="col-sm-12 testimonial">
+                        <p>testimonial</p>
                     </div>
+                    <div class="col-sm-12 testimonial">
+                        <p>testimonial</p>
+                    </div>
+                    <div class="col-sm-12 testimonial">
+                        <p>testimonial</p>
+                    </div>
+                    <div class="col-sm-12 testimonial">
+                        <p>testimonial</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -113,53 +117,58 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,weekend" width="100px" height="100px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,weekend" width="100px" height="100px" alt=""
+                            srcset="">
                         <h5>WEEKEND</h5>
                     </div>
                 </div>
             </div>
-            
+
             <!-- Column 2 -->
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,Holidays" width="100px" height="100px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,Holidays" width="100px" height="100px" alt=""
+                            srcset="">
                         <h5>Holidays</h5>
                     </div>
                 </div>
             </div>
-            
+
             <!-- Column 3 -->
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,Moving,house" width="100px" height="100px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,Moving,house" width="100px" height="100px"
+                            alt="" srcset="">
                         <h5>Moving house</h5>
                     </div>
                 </div>
             </div>
-            
+
             <!-- Column 4 -->
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,work" width="100px" height="100px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,work" width="100px" height="100px" alt=""
+                            srcset="">
                         <h5>For work</h5>
                     </div>
                 </div>
             </div>
-            
+
             <!-- Column 5 -->
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,red" width="100px" height="100px" alt="" srcset="">
+                        <img src="https://source.unsplash.com/random/?car,red" width="100px" height="100px" alt=""
+                            srcset="">
                         <h5>Wedding</h5>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
 </section>
 {% endblock %}
