finish "rent my car page"  (need to change color of the icons)

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -216,3 +216,7 @@ footer a.LOGO{
   border-radius: 50%;
   margin-bottom: 12px;
 }
+
+section.rentCar{
+  background-image: url(https://images.unsplash.com/photo-1520121401995-928cd50d4e27?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
