--- a/templates/login.html
+++ b/templates/login.html
@@ -15,13 +15,14 @@ Login
         <input type="password" class="form-control" id="password" placeholder="Password" pname="password" required>
     </div>
     <div class="form-group">
-        <p class="lato-light">forget password? <a href="/resetpassword">Reset password</a></p>
+        <p class="lato-regular">forget password? <a class="a-color" href="/resetpassword">Reset password</a></p>
     </div>
 
     <button type="submit" class="btn btn-primary col-md-12 btn-style">
         <i class="fa-solid fa-right-to-bracket"></i> Login
     </button>
 
-    <p class="lato-light mt-3">Don't have an account? <a class="" href="/signup">Create one here</a></p>
+    <p class="lato-regular mt-3 ">Don't have an account? <a class="a-color" href="/signup">Create one
+            here</a></p>
 </form>
 {% endblock %}
