--- a/templates/insurnece.html
+++ b/templates/insurnece.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Insurence information{% endblock %}
+{% block title %}insurance for-owner & guest {% endblock %}
 {% block content %}
-<h1>Insurence</h1>
+<h1>insurance</h1>
 {% endblock %}
