--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                 <div class="col-md-3 col-sm-6 footer-section">
                     <h4>Host</h4>
                     <p><a href="#">Why rent your car?</a></p>
-                    <p><a href="#">Insurance</a></p>
+                    <p><a href="insurance">Insurance</a></p>
                     <p><a href="#">Your rental experience</a></p>
                     <p><a href="#">Tips</a></p>
                     <p><a href="#">Professionals</a></p>
@@ -86,8 +86,8 @@
                 <div class="col-md-3 col-sm-6 footer-section">
                     <h4>Guest</h4>
                     <p><a href="#">Rental</a></p>
-                    <p><a href="#">experience</a></p>
-                    <p><a href="#">Insurance</a></p>
+                    <p><a href="">experience</a></p>
+                    <p><a href="insurance">Insurance</a></p>
                     <p><a href="#">Tips</a></p>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-section">
