--- a/templates/rentmycar.html
+++ b/templates/rentmycar.html
@@ -8,8 +8,7 @@
 <section class="rentCar py-5">
     <div class="container w-75 content-start">
         <h3 class="text-start text-left text-light m-3">Renting out your car is a good way to make money! How much can
-            you
-            earn?</h3>
+            you earn?</h3>
     </div>
     <div class="container w-75 content-start">
         <div class="row ">
