--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -24,12 +24,13 @@
     <div class="container">
         <div class="row justify-content-center">
             <!-- guest -->
-            <div class="col-lg-5 bg-dark ">
-                <h3 class="text-dark">Guest</h3>
+            <div class="col-lg-5 ">
+                <h3 class="text-light bg-dark">Guest</h3>
                 <div class="">
-                    <h5 class="text-dark bg-white text-center">Civil liability insurance included</h5>
-                    <p class="text-muted text-start">- Bodily injury: unlimited.</p>
-                    <p class="text-muted text-start">- Property damage: limited to XXX MAD (including fire, explosion 2
+                    <h5 class="text-white bg-dark text-center">Civil liability insurance included</h5>
+                    <p class="text-muted bg-dark text-start">- Bodily injury: unlimited.</p>
+                    <p class="text-muted bg-dark text-start">- Property damage: limited to XXX MAD (including fire,
+                        explosion 2
                         million).</p>
                 </div>
                 <div class="">
@@ -44,8 +45,8 @@
                 </div>
             </div>
             <!-- Host -->
-            <div class="col-lg-5 bg-dark">
-                <h3 class="text-dark ">Host</h3>
+            <div class="col-lg-5 bg-warning">
+                <h3 class="text-light ">Host</h3>
                 <div>
                     <h5 class="text-dark bg-white text-center">XXX insurance included</h5>
                     <p class="text-muted text-start">Our insurance automatically replaces your vehicle's insurance for
