last commit before mergin to net-version

--- a/templates/rentmycar.html
+++ b/templates/rentmycar.html
@@ -59,7 +59,7 @@
 <!-- ========== End Rent car ========== -->
 
 <!-- ========== Start Features ========== -->
-<div class="features py-5 container w-75 text-center align-items-center gape-2">
+<div class="features py-5 container w-75 text-center">
     <div class="row ">
         <!-- Add free -->
         <div class="col-lg-4 ">
