--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -16,7 +16,6 @@
         </div>
     </div>
 </section>
-
 <!-- ========== End HERO ========== -->
 
 <!-- ========== Start Guest and host insurance section ========== -->
@@ -33,8 +32,7 @@
                                 <h5 class="text-dark text-start w-75">Civil liability insurance included</h5>
                                 <p class="text-muted w-75">- Bodily injury: unlimited.</p>
                                 <p class="text-muted w-75">- Property damage: limited to XXX MAD (including fire,
-                                    explosion 2
-                                    million)
+                                    explosion 2 million)
                                 </p>
                             </div>
                         </div>
@@ -61,7 +59,6 @@
         </div>
         <!-- ========== End Guest insurance section ========== -->
         <!-- ========== Start Host insurance section ========== -->
-
         <div class="col-lg-6 mt-5">
             <div class="bg-info">
                 <h3 class="text-center text-black p-2">Host</h3>
