--- a/templates/login.html
+++ b/templates/login.html
@@ -6,23 +6,18 @@ Login
 
 {% block content %}
 <h2 class="display-4 text-center">Welcome Back</h2>
-<form class="w-50" action="/login" method="post">
-    <div class="form-group">
-        <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
-    </div>
+<form id="signupForm" action="/login" method="post" class="w-50">
+    <input class="form-control my-3 " placeholder="Email" type="email" id="validationCustom01" name="email" required>
+    <input class="form-control my-3 " placeholder="Password" type="password" id="password" name="password" required="">
+    <p class="lato-regular">Forgot password?
+        <a class="a-color" href="/resetpassword">Reset password</a>
+    </p>
+    <button type="submit" class="btn col-12 btn-style">
+        <i class="bi bi-box-arrow-in-right mx-2"></i>
+        Login</button>
+    <p class="lato-regular mt-3">Don't have an account?
+        <a class="a-color" href="/signup">Sign Up here</a>
+    </p>
 
-    <div class="form-group">
-        <input type="password" class="form-control" id="password" placeholder="Password" pname="password" required>
-    </div>
-    <div class="form-group">
-        <p class="lato-regular">forget password? <a class="a-color" href="/resetpassword">Reset password</a></p>
-    </div>
-
-    <button type="submit" class="btn btn-primary col-md-12 btn-style">
-        <i class="fa-solid fa-right-to-bracket"></i> Login
-    </button>
-
-    <p class="lato-regular mt-3 ">Don't have an account? <a class="a-color" href="/signup">Create one
-            here</a></p>
 </form>
 {% endblock %}
