--- a/templates/home.html
+++ b/templates/home.html
@@ -9,23 +9,24 @@
         <h3 class="lato-bold">Feeling the urge to go? Absolutely!</h3>
     </div>
     <div class="searchForm">
-        <form action="/search" method="GET">
-            <div class="form-group">
-                <input type="text" class="form-control" name="place" placeholder="Enter an address, a train station..."
-                    id="place">
+        <form action="" method="">
+            <div class="">
+                <input type="text" class="form-control mb-3" name="place"
+                    placeholder="Enter an address, a train station..." id="place">
             </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
+            <div class="row mb-3">
+                <div class="col-md-6">
                     <input class="form-control" placeholder="Start of rental" onfocus="(this.type='date')"
                         onblur="(this.type='text')" type="text" name="date" id="date">
                 </div>
-                <div class="form-group col-md-6">
+                <div class="col-md-6">
                     <input class="form-control" type="text" placeholder="End of rental" onfocus="(this.type='date')"
                         onblur="(this.type='text')" name="date" id="date">
                 </div>
             </div>
-            <button class="btn btn-outline-seconday btn-style col-md-12" type="submit"><i
-                    class="fas fa-search"></i>&ThickSpace;&ThickSpace; Search</button>
+            <button class="btn btn-outline-seconday btn-style col-md-12" type="submit">
+                <i class="bi bi-search"></i>
+                &ThickSpace; Search</button>
         </form>
     </div>
 </div>
@@ -36,17 +37,17 @@
         <div class="row">
             <div class="col-sm-4">
                 <!-- Content for the first column -->
-                <i class="fa-solid fa-user-group" style="color: #43E094;"></i>
+                <i class="bi bi-people" style="color: #43E094;"></i>
                 <span>Additional drivers and all equipment for free</span>
             </div>
             <div class="col-sm-4">
                 <!-- Content for the first column -->
-                <i class="fa-solid fa-shield" style="color: #43E094;"></i> <span>Multi-risk insurance and assistance
+                <i class="bi bi-shield-shaded" style="color: #43E094;"></i> <span>Multi-risk insurance and assistance
                     24/7</span>
             </div>
             <div class="col-sm-4">
                 <!-- Content for the first column -->
-                <i class="fa-solid fa-car-side" style="color: #43E094;"></i> <span>30,000 cars and utility vehicles to
+                <i class="bi bi-car-front" style=" color: #43E094;"></i> <span>30,000 cars and utility vehicles to
                     rent</span>
             </div>
         </div>
