--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -2,10 +2,14 @@
 
 {% block title %}reset password{% endblock %}
 {% block content %}
+<h2 class="display-4 text-center text-capitalize">reset password</h2>
+
 <form action="" class="w-50">
-    <input type="email" name="email" id="email" class="form-control" placeholder="Email:">
-    <button class="btn  btn-outline-primary col-12 my-3" type="submit"><i class="bi bi-send"></i> Send verification
-        link</button>
+    <input type="email" name="email" id="email" class="form-control" placeholder="Email">
+    <button class="btn  btn-style col-12 my-3" type="submit">
+        <i class="bi bi-send"></i>
+        Send verification link
+    </button>
     <p class="lato-regular">Don't have an account? <a href="/signup">Create one here</a></p>
 
 </form>
