--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,36 +3,34 @@
 {% block title %}Signup{% endblock %}
 
 {% block content %}
-<div class="">
-  <h2 class="display-4 text-center">Welcome Aboard</h2>
-  <form id="signupForm" action="/signup" method="post" class="w-50">
-    <div class="form-group">
-      <input class="form-control " placeholder="Email" type="email" id="validationCustom01" name="email" required>
+<h2 class="display-4 text-center">Welcome Aboard</h2>
+<form id="signupForm" action="/signup" method="post" class="w-50">
+  <input class="form-control " placeholder="Email" type="email" id="validationCustom01" name="email" required>
+
+  <div class="row ">
+    <div class="col-md-6 mt-3">
+      <input class="form-control " placeholder="Password" type="password" id="password" name="password" required="">
     </div>
 
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <input class="form-control " placeholder="Password" type="password" id="password" name="password" required="">
-      </div>
-
-      <div class="form-group col-md-6">
-        <input class="form-control " type="password" id="confirm_password" placeholder="Confirm password"
-          name="confirm_password" required="">
-      </div>
-
+    <div class="col-md-6 mt-3">
+      <input class="form-control " type="password" id="confirm_password" placeholder="Confirm password"
+        name="confirm_password" required="">
     </div>
-    <div class="form-check">
-      <input class="form-check-input" required type="checkbox" value="" id="defaultCheck1">
-      <label class="form-check-label lato-regular" for="defaultCheck1">
-        I have read and agree to the
-        <a href="#" target="_blank" class="a-color">privacy policy </a>
-      </label>
-    </div>
-    <br>
-    <button type="submit" class="btn  btn-outline-primary col-md-12 btn-style"><i class="fa-solid fa-user-plus"></i>
-      Sign-up</button>
-    <p class="lato-regular mt-3">Already have an account? <a class="a-color" href="/login">Log in here</a></p>
 
-  </form>
-</div>
+  </div>
+  <div class="form-check mt-3">
+    <input class="form-check-input" required type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label lato-regular" for="defaultCheck1">
+      I have read and agree to the
+      <a href="#" target="_blank" class="a-color">privacy policy </a>
+    </label>
+  </div>
+  <button type="submit" class="btn col-12 my-3 btn-style">
+    <i class="bi bi-person-add mx-2"></i>
+    Sign-up</button>
+  <p class="lato-regular ">Already have an account?
+    <a class="a-color" href="/login">Log in here</a>
+  </p>
+
+</form>
 {% endblock %}
